# seedlist-dashboard

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  bandit.yaml  pyproject.toml
backend/: README.md
backend/projects/server/: Dockerfile  Makefile  pyproject.toml  pytest.ini
backend/projects/server/dashboard/: apps.py  db_router.py  exceptions.py
backend/projects/server/dashboard/enums/: databases.py  error_codes.py
backend/projects/server/dashboard/views/graphql/: api.py  view.py
backend/projects/server/dashboard/views/graphql/auth/: schema.py
backend/projects/server/dashboard/views/graphql/auth/mutations/: __init__.py  login.py
backend/projects/server/dashboard/views/graphql/auth/types/: user_type.py
backend/projects/server/dashboard/views/graphql/deliverability/: schema.py
backend/projects/server/deliverability/: apps.py
backend/projects/server/deliverability/migrations/: 0001_initial.py  0002_seedaccount.py
backend/projects/server/deliverability/models/: __init__.py  isp.py  seed_account.py
backend/projects/server/scripts/: start.sh
backend/projects/server/server/: .env.dist  urls.py
backend/projects/server/server/settings/: __init__.py  base.py  cors.py  graphene.py  logger.py  utils.py
backend/projects/server/server/wsgi/: __init__.py  gunicorn_config.py  health_check.py
backend/projects/server/users/: apps.py  auth.py  constants.py  middleware.py
backend/projects/server/users/migrations/: 0001_initial.py
backend/projects/server/users/models/: __init__.py  client_edm.py  role.py  user.py
frontend/: .eslintrc.json  (+8 more)
(+29 files in other folders)
